# Mach-Cutoff-Simulation

./: .gitignore  README.md  pyproject.toml  ray.py  refractive_index.py
docs/: guidance_and_solver_notes.md
examples/: benchmark_us_archetypes.json  config_benchmark_base.json  config_example.json  config_falcon9_lz1_noguidance.json  config_msp_dtw.json  config_msp_dtw_tuning_fast.json  config_population_example.json  config_smoke.json  guidance_benchmark_base.json  guidance_example.json  waypoints_example.json  waypoints_falcon9_lz1_return.json  waypoints_msp_dtw.json
mach_cutoff/: __init__.py  aircraft.py  cli.py  config.py  geodesy.py  guidance_config.py  raytrace.py  waypoints.py
mach_cutoff/atmosphere/: __init__.py  acoustics.py  hrrr.py  interpolation.py
mach_cutoff/benchmark/: __init__.py  analysis.py  census_blockgroups.py  cli.py  config.py  gpw.py  runner.py  scenarios.py
mach_cutoff/core/: __init__.py  constants.py  raytrace.py
mach_cutoff/data/: us_metro_population_sample.csv
mach_cutoff/flight/: __init__.py  aircraft.py  guidance.py  waypoints.py
mach_cutoff/simulation/: __init__.py  engine.py  outputs.py  population.py  route_optimizer.py  sweeps.py
scripts/: run_xb1_paper_screening.sh  run_xb1_research_parallel.sh  run_xb1_research_parallel_two_wave.sh
tests/: test_benchmark_analysis.py  test_benchmark_scenarios.py  test_population_and_scoring.py  test_subsonic_support.py
tmp/: config_full_groundhits_nonfalcon.json  config_msp_srq_medium_noguidance.json  config_msp_srq_medium_visual.json  waypoints_msp_srq.json
(+33 files in other folders)
